--- a/_posts/2020-01-27-ISM2020.md
+++ b/_posts/2020-01-27-ISM2020.md
@@ -1,9 +1,8 @@
 ---
 layout: default
-title:  "CoCaLa Team won Causality 4 Climate NeurIPS competition"
+title:  "[Incontro di Statistica Matematica 2020](http://www.dima.unige.it/SMID/ISM2020/)" 
 ---
 
-[Incontro di Statistica Matematica 2020](http://www.dima.unige.it/SMID/ISM2020/) 
 
 Presenting work on Graphical continuous Lyapunov models and 
 nice talk and tutorial on our R package 
