--- a/_posts/2020-01-27-ISM2020.md
+++ b/_posts/2020-01-27-ISM2020.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "[Incontro di Statistica Matematica 2020](http://www.dima.unige.it/SMID/ISM2020/)" 
+title:  "Incontro di Statistica Matematica" 
 ---
 
 
@@ -8,3 +8,6 @@ Presenting work on Graphical continuous Lyapunov models and
 nice talk and tutorial on our R package 
 [stagedtrees](https://cran.r-project.org/package=stagedtrees) 
 by [Federico Carli](https://sites.google.com/site/federicocarlipersonalwebpage/home).  
+
+
+[Incontro di Statistica Matematica 2020](http://www.dima.unige.it/SMID/ISM2020/)
