--- a/_posts/2020-01-27-ISM2020.md
+++ b/_posts/2020-01-27-ISM2020.md
@@ -3,11 +3,10 @@ layout: default
 title:  "Incontro di Statistica Matematica" 
 ---
 
-
-Presenting work on Graphical continuous Lyapunov models and 
+[Presenting](../pdf/slides_varando_ISM2020.pdf) work on Graphical continuous Lyapunov models and 
 nice talk and tutorial on our R package 
 [stagedtrees](https://cran.r-project.org/package=stagedtrees) 
 by [Federico Carli](https://sites.google.com/site/federicocarlipersonalwebpage/home).  
 
-
 [Incontro di Statistica Matematica 2020](http://www.dima.unige.it/SMID/ISM2020/)
+
