--- a/_posts/2020-01-27-ISM2020.md
+++ b/_posts/2020-01-27-ISM2020.md
@@ -3,6 +3,8 @@ layout: default
 title:  "Incontro di Statistica Matematica" 
 ---
 
+![ISM2020]({{site.baseurl}}/img/ISM2020.JPG){:class="img-responsive"}
+
 [Presenting]({{ site.baseurl }}/pdf/slides_varando_ISM2020.pdf) work on Graphical continuous Lyapunov models and 
 nice talk and tutorial on our R package 
 [stagedtrees](https://cran.r-project.org/package=stagedtrees) 
