--- a/_posts/2020-01-27-ISM2020.md
+++ b/_posts/2020-01-27-ISM2020.md
@@ -3,7 +3,6 @@ layout: default
 title:  "Incontro di Statistica Matematica" 
 ---
 
-![ISM2020]({{site.baseurl}}/images/ISM2020.JPG){:class="img-responsive"}
 
 [Presenting]({{ site.baseurl }}/pdf/slides_varando_ISM2020.pdf) work on Graphical continuous Lyapunov models and 
 nice talk and tutorial on our R package 
@@ -11,4 +10,7 @@ nice talk and tutorial on our R package
 by [Federico Carli](https://sites.google.com/site/federicocarlipersonalwebpage/home).  
 
 [Incontro di Statistica Matematica 2020](http://www.dima.unige.it/SMID/ISM2020/)
+
+
+![ISM2020]({{site.baseurl}}/images/ISM2020.JPG){:class="img-post"}
 
