--- a/_posts/2020-01-27-ISM2020.md
+++ b/_posts/2020-01-27-ISM2020.md
@@ -5,7 +5,7 @@ title:  "Incontro di Statistica Matematica"
 
 
 [Presenting]({{ site.baseurl }}/pdf/slides_varando_ISM2020.pdf) work on Graphical continuous Lyapunov models and 
-nice talk and tutorial on our R package 
+nice [talk and tutorial]({{ site.baseurl }}/pdf/presentazione_carli.pdf) on our R package 
 [stagedtrees](https://cran.r-project.org/package=stagedtrees) 
 by [Federico Carli](https://sites.google.com/site/federicocarlipersonalwebpage/home).  
 
