--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -1,4 +1,4 @@
-@article{DBLP:journals/corr/abs-2106-04416,
+@misc{DBLP:journals/corr/abs-2106-04416,
   author    = {Manuele Leonelli and
                Gherardo Varando},
   title     = {Context-Specific Causal Discovery for Categorical Data Using Staged
@@ -14,7 +14,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/abs-2108-01994,
+@misc{DBLP:journals/corr/abs-2108-01994,
   author    = {Gherardo Varando and
                Federico Carli and
                Manuele Leonelli},
@@ -84,60 +84,8 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/abs-2002-09573,
-  author    = {Sebastian Weichwald and
-               Martin E. Jakobsen and
-               Phillip B. Mogensen and
-               Lasse Petersen and
-               Nikolaj Thams and
-               Gherardo Varando},
-  title     = {Causal structure learning from time series: Large regression coefficients
-               may predict causal links better in practice than small p-values},
-  journal   = {CoRR},
-  volume    = {abs/2002.09573},
-  year      = {2020},
-  url       = {https://arxiv.org/abs/2002.09573},
-  eprinttype = {arXiv},
-  eprint    = {2002.09573},
-  timestamp = {Thu, 14 Oct 2021 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-2002-09573.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
 
-@article{DBLP:journals/corr/abs-2005-10483,
-  author    = {Gherardo Varando and
-               Niels Richard Hansen},
-  title     = {Graphical continuous Lyapunov models},
-  journal   = {CoRR},
-  volume    = {abs/2005.10483},
-  year      = {2020},
-  url       = {https://arxiv.org/abs/2005.10483},
-  eprinttype = {arXiv},
-  eprint    = {2005.10483},
-  timestamp = {Fri, 22 May 2020 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-2005-10483.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@article{DBLP:journals/corr/abs-2006-01448,
-  author    = {Irene C{\'{o}}rdoba and
-               Concha Bielza and
-               Pedro Larra{\~{n}}aga and
-               Gherardo Varando},
-  title     = {Sparse Cholesky covariance parametrization for recovering latent structure
-               in ordered data},
-  journal   = {CoRR},
-  volume    = {abs/2006.01448},
-  year      = {2020},
-  url       = {https://arxiv.org/abs/2006.01448},
-  eprinttype = {arXiv},
-  eprint    = {2006.01448},
-  timestamp = {Tue, 09 Jun 2020 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-2006-01448.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@article{DBLP:journals/corr/abs-2006-03005,
+@misc{DBLP:journals/corr/abs-2006-03005,
   author    = {Gherardo Varando},
   title     = {Learning DAGs without imposing acyclicity},
   journal   = {CoRR},
@@ -151,7 +99,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/abs-2012-13798,
+@misc{DBLP:journals/corr/abs-2012-13798,
   author    = {Federico Carli and
                Manuele Leonelli and
                Gherardo Varando},
@@ -239,7 +187,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{DBLP:journals/corr/abs-1811-04759,
+@misc{DBLP:journals/corr/abs-1811-04759,
   author    = {Gherardo Varando and
                Concha Bielza and
                Pedro Larra{\~{n}}aga and
