--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -1,33 +1,28 @@
-@misc{DBLP:journals/corr/abs-2106-04416,
-  author    = {Manuele Leonelli and
-               Gherardo Varando},
-  title     = {Context-Specific Causal Discovery for Categorical Data Using Staged
-               Trees},
-  journal   = {CoRR},
-  volume    = {abs/2106.04416},
-  year      = {2021},
-  url       = {https://arxiv.org/abs/2106.04416},
-  eprinttype = {arXiv},
-  eprint    = {2106.04416},
-  timestamp = {Fri, 11 Jun 2021 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-2106-04416.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@misc{leonelli2021contextspecific,
+      title={Context-Specific Causal Discovery for Categorical Data Using Staged Trees}, 
+      author={Manuele Leonelli and Gherardo Varando},
+      year={2021},
+      eprint={2106.04416},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME}
 }
 
-@misc{DBLP:journals/corr/abs-2108-01994,
-  author    = {Gherardo Varando and
-               Federico Carli and
-               Manuele Leonelli},
-  title     = {Staged trees and asymmetry-labeled DAGs},
-  journal   = {CoRR},
-  volume    = {abs/2108.01994},
-  year      = {2021},
-  url       = {https://arxiv.org/abs/2108.01994},
-  eprinttype = {arXiv},
-  eprint    = {2108.01994},
-  timestamp = {Thu, 05 Aug 2021 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-2108-01994.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@misc{carli2020r,
+      title={The R Package stagedtrees for Structural Learning of Stratified Staged Trees},
+      author={Federico Carli and Manuele Leonelli and Eva Riccomagno and Gherardo Varando},
+      year={2020},
+      eprint={2004.06459},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME}
+}
+
+@misc{varando2021staged,
+      title={Staged trees and asymmetry-labeled DAGs}, 
+      author={Gherardo Varando and Federico Carli and Manuele Leonelli},
+      year={2021},
+      eprint={2108.01994},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
 }
 
 @article{DBLP:journals/access/CordobaBLV20,
@@ -41,7 +36,6 @@
   volume    = {8},
   pages     = {154614--154624},
   year      = {2020},
-  url       = {https://doi.org/10.1109/ACCESS.2020.3018593},
   doi       = {10.1109/ACCESS.2020.3018593},
   timestamp = {Mon, 03 Jan 2022 00:00:00 +0100},
   biburl    = {https://dblp.org/rec/journals/access/CordobaBLV20.bib},
@@ -58,7 +52,6 @@
   volume    = {125},
   pages     = {240--250},
   year      = {2020},
-  url       = {https://doi.org/10.1016/j.ijar.2020.07.007},
   doi       = {10.1016/j.ijar.2020.07.007},
   timestamp = {Mon, 03 Jan 2022 00:00:00 +0100},
   biburl    = {https://dblp.org/rec/journals/ijar/CordobaVBL20.bib},
@@ -85,34 +78,22 @@
 }
 
 
-@misc{DBLP:journals/corr/abs-2006-03005,
-  author    = {Gherardo Varando},
-  title     = {Learning DAGs without imposing acyclicity},
-  journal   = {CoRR},
-  volume    = {abs/2006.03005},
-  year      = {2020},
-  url       = {https://arxiv.org/abs/2006.03005},
-  eprinttype = {arXiv},
-  eprint    = {2006.03005},
-  timestamp = {Tue, 09 Jun 2020 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-2006-03005.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@misc{varando2020learning,
+      title={Learning DAGs without imposing acyclicity}, 
+      author={Gherardo Varando},
+      year={2020},
+      eprint={2006.03005},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
 }
 
-@misc{DBLP:journals/corr/abs-2012-13798,
-  author    = {Federico Carli and
-               Manuele Leonelli and
-               Gherardo Varando},
-  title     = {A new class of generative classifiers based on staged tree models},
-  journal   = {CoRR},
-  volume    = {abs/2012.13798},
-  year      = {2020},
-  url       = {https://arxiv.org/abs/2012.13798},
-  eprinttype = {arXiv},
-  eprint    = {2012.13798},
-  timestamp = {Tue, 05 Jan 2021 00:00:00 +0100},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-2012-13798.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@misc{carli2020new,
+      title={A new class of generative classifiers based on staged tree models}, 
+      author={Federico Carli and Manuele Leonelli and Gherardo Varando},
+      year={2020},
+      eprint={2012.13798},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI}
 }
 
 @inproceedings{DBLP:conf/nips/WeichwaldJMPTV19,
@@ -158,7 +139,6 @@
   pages     = {117--124},
   publisher = {Springer},
   year      = {2018},
-  url       = {https://doi.org/10.1007/978-3-030-03493-1\_13},
   doi       = {10.1007/978-3-030-03493-1\_13},
   timestamp = {Tue, 14 May 2019 10:00:45 +0200},
   biburl    = {https://dblp.org/rec/conf/ideal/CordobaVBL18.bib},
@@ -187,21 +167,13 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@misc{DBLP:journals/corr/abs-1811-04759,
-  author    = {Gherardo Varando and
-               Concha Bielza and
-               Pedro Larra{\~{n}}aga and
-               Eva Riccomagno},
-  title     = {Markov Property in Generative Classifiers},
-  journal   = {CoRR},
-  volume    = {abs/1811.04759},
-  year      = {2018},
-  url       = {http://arxiv.org/abs/1811.04759},
-  eprinttype = {arXiv},
-  eprint    = {1811.04759},
-  timestamp = {Fri, 23 Nov 2018 00:00:00 +0100},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1811-04759.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+@misc{varando2018markov,
+      title={Markov Property in Generative Classifiers}, 
+      author={Gherardo Varando and Concha Bielza and Pedro Larrañaga and Eva Riccomagno},
+      year={2018},
+      eprint={1811.04759},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
 }
 
 @article{DBLP:journals/ijar/VarandoBL16,
@@ -214,7 +186,6 @@
   volume    = {68},
   pages     = {164--178},
   year      = {2016},
-  url       = {https://doi.org/10.1016/j.ijar.2015.06.006},
   doi       = {10.1016/j.ijar.2015.06.006},
   timestamp = {Tue, 16 Feb 2021 00:00:00 +0100},
   biburl    = {https://dblp.org/rec/journals/ijar/VarandoBL16.bib},
@@ -233,7 +204,6 @@
   number    = {3},
   pages     = {236--264},
   year      = {2015},
-  url       = {https://doi.org/10.1002/int.21699},
   doi       = {10.1002/int.21699},
   timestamp = {Mon, 26 Oct 2020 00:00:00 +0100},
   biburl    = {https://dblp.org/rec/journals/ijis/VarandoLNLB15.bib},
@@ -266,7 +236,6 @@
   number    = {5},
   pages     = {216--233},
   year      = {2015},
-  url       = {https://doi.org/10.1002/widm.1157},
   doi       = {10.1002/widm.1157},
   timestamp = {Fri, 21 Jan 2022 00:00:00 +0100},
   biburl    = {https://dblp.org/rec/journals/widm/BorchaniVBL15.bib},
@@ -288,10 +257,19 @@
   pages     = {519--534},
   publisher = {Springer},
   year      = {2014},
-  url       = {https://doi.org/10.1007/978-3-319-11433-0\_34},
   doi       = {10.1007/978-3-319-11433-0\_34},
   timestamp = {Sat, 19 Oct 2019 01:00:00 +0200},
   biburl    = {https://dblp.org/rec/conf/pgm/VarandoBL14.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@ARTICLE{10.3389/fnana.2018.00037,
+AUTHOR={Varando, Gherardo and Benavides-Piccione, Ruth and Muñoz, Alberto and Kastanauskaite, Asta and Bielza, Concha and Larrañaga, Pedro and DeFelipe, Javier},
+TITLE={MultiMap: A Tool to Automatically Extract and Analyse Spatial Microscopic Data From Large Stacks of Confocal Microscopy Images},
+JOURNAL={Frontiers in Neuroanatomy},
+VOLUME={12},
+YEAR={2018},
+URL={https://www.frontiersin.org/article/10.3389/fnana.2018.00037},
+DOI={10.3389/fnana.2018.00037},
+ISSN={1662-5129}
+}
