--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -1,3 +1,12 @@
+@inproceedings{varando2021learning,
+  title={Learning Granger Causal Feature Representations},
+  author={Varando, Gherardo and Fern{\'a}ndez-Torres, Miguel-{\'A}ngel and Camps-Valls, Gustau},
+  booktitle={AGU Fall Meeting 2021},
+  year={2021},
+  organization={AGU}
+}
+
+
 @misc{leonelli2021contextspecific,
       title={Context-Specific Causal Discovery for Categorical Data Using Staged Trees}, 
       author={Manuele Leonelli and Gherardo Varando},
