--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -1,3 +1,16 @@
+@article{JSSv102i06,
+ title={The R Package stagedtrees for Structural Learning of Stratified Staged Trees},
+ volume={102},
+ url={https://www.jstatsoft.org/index.php/jss/article/view/v102i06},
+ doi={10.18637/jss.v102.i06},
+ number={6},
+ journal={Journal of Statistical Software},
+ author={Carli, Federico and Leonelli, Manuele and Riccomagno, Eva and Varando, Gherardo},
+ year={2022},
+ pages={1–30}
+}
+
+
 @misc{leonelli2021contextspecific,
       title={Context-Specific Causal Discovery for Categorical Data Using Staged Trees}, 
       author={Manuele Leonelli and Gherardo Varando},
@@ -7,14 +20,6 @@
       primaryClass={stat.ME}
 }
 
-@misc{carli2020r,
-      title={The R Package stagedtrees for Structural Learning of Stratified Staged Trees},
-      author={Federico Carli and Manuele Leonelli and Eva Riccomagno and Gherardo Varando},
-      year={2020},
-      eprint={2004.06459},
-      archivePrefix={arXiv},
-      primaryClass={stat.ME}
-}
 
 @misc{varando2021staged,
       title={Staged trees and asymmetry-labeled DAGs}, 
