--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -1,5 +1,5 @@
 @article{JSSv102i06,
- title={The R Package stagedtrees for Structural Learning of Stratified Staged Trees},
+ title={The {R} Package stagedtrees for Structural Learning of Stratified Staged Trees},
  volume={102},
  url={https://www.jstatsoft.org/index.php/jss/article/view/v102i06},
  doi={10.18637/jss.v102.i06},
@@ -22,7 +22,7 @@
 
 
 @misc{varando2021staged,
-      title={Staged trees and asymmetry-labeled DAGs}, 
+      title={Staged trees and asymmetry-labeled {DAG}s}, 
       author={Gherardo Varando and Federico Carli and Manuele Leonelli},
       year={2021},
       eprint={2108.01994},
@@ -35,7 +35,7 @@
                Concha Bielza and
                Pedro Larra{\~{n}}aga and
                Gherardo Varando},
-  title     = {Sparse Cholesky Covariance Parametrization for Recovering Latent Structure
+  title     = {Sparse {C}holesky Covariance Parametrization for Recovering Latent Structure
                in Ordered Data},
   journal   = {{IEEE} Access},
   volume    = {8},
@@ -52,7 +52,7 @@
                Gherardo Varando and
                Concha Bielza and
                Pedro Larra{\~{n}}aga},
-  title     = {On generating random Gaussian graphical models},
+  title     = {On generating random {G}aussian graphical models},
   journal   = {Int. J. Approx. Reason.},
   volume    = {125},
   pages     = {240--250},
@@ -64,7 +64,7 @@
 }
 
 @InProceedings{pmlr-v124-varando20a,
-  title = 	 {Graphical continuous Lyapunov models},
+  title = 	 {Graphical continuous {L}yapunov models},
   author =       {Varando, Gherardo and Richard Hansen, Niels},
   booktitle = 	 {Proceedings of the 36th Conference on Uncertainty in Artificial Intelligence (UAI)},
   pages = 	 {989--998},
@@ -80,7 +80,7 @@
 }
 
 @misc{varando2020learning,
-      title={Learning DAGs without imposing acyclicity}, 
+      title={Learning {DAG}s without imposing acyclicity}, 
       author={Gherardo Varando},
       year={2020},
       eprint={2006.03005},
@@ -99,7 +99,7 @@
 
 
 @InProceedings{pmlr-v123-weichwald20a,
-  title = 	 {Causal structure learning from time series: Large regression coefficients may predict causal links better in practice than small p-values},
+  title = 	 {Causal structure learning from time series: {L}arge regression coefficients may predict causal links better in practice than small p-values},
   author =       {Weichwald, Sebastian and Jakobsen, Martin E. and Mogensen, Phillip B. and Petersen, Lasse and Thams, Nikolaj and Varando, Gherardo},
   booktitle = 	 {Proceedings of the NeurIPS 2019 Competition and Demonstration Track},
   pages = 	 {27--36},
@@ -124,7 +124,7 @@
                David Camacho and
                Paulo Novais and
                Antonio J. Tall{\'{o}}n{-}Ballesteros},
-  title     = {A Fast Metropolis-Hastings Method for Generating Random Correlation
+  title     = {A Fast {M}etropolis-{H}astings Method for Generating Random Correlation
                Matrices},
   booktitle = {Intelligent Data Engineering and Automated Learning - {IDEAL} 2018
                - 19th International Conference, Madrid, Spain, November 21-23, 2018,
@@ -163,7 +163,7 @@
 }
 
 @misc{varando2018markov,
-      title={Markov Property in Generative Classifiers}, 
+      title={{M}arkov Property in Generative Classifiers}, 
       author={Gherardo Varando and Concha Bielza and Pedro Larrañaga and Eva Riccomagno},
       year={2018},
       eprint={1811.04759},
@@ -171,11 +171,22 @@
       primaryClass={cs.LG}
 }
 
+@ARTICLE{10.3389/fnana.2018.00037,
+AUTHOR={Varando, Gherardo and Benavides-Piccione, Ruth and Muñoz, Alberto and Kastanauskaite, Asta and Bielza, Concha and Larrañaga, Pedro and DeFelipe, Javier},
+TITLE={Multi{M}ap: A Tool to Automatically Extract and Analyse Spatial Microscopic Data From Large Stacks of Confocal Microscopy Images},
+JOURNAL={Frontiers in Neuroanatomy},
+VOLUME={12},
+YEAR={2018},
+URL={https://www.frontiersin.org/article/10.3389/fnana.2018.00037},
+DOI={10.3389/fnana.2018.00037},
+ISSN={1662-5129}
+}
+
 @article{DBLP:journals/ijar/VarandoBL16,
   author    = {Gherardo Varando and
                Concha Bielza and
                Pedro Larra{\~{n}}aga},
-  title     = {Decision functions for chain classifiers based on Bayesian networks
+  title     = {Decision functions for chain classifiers based on {B}ayesian networks
                for multi-label classification},
   journal   = {Int. J. Approx. Reason.},
   volume    = {68},
@@ -209,7 +220,7 @@
   author    = {Gherardo Varando and
                Concha Bielza and
                Pedro Larra{\~{n}}aga},
-  title     = {Decision boundary for discrete Bayesian network classifiers},
+  title     = {Decision boundary for discrete {B}ayesian network classifiers},
   journal   = {J. Mach. Learn. Res.},
   volume    = {16},
   pages     = {2725--2749},
@@ -244,7 +255,7 @@
   editor    = {Linda C. van der Gaag and
                A. J. Feelders},
   title     = {Expressive Power of Binary Relevance and Chain Classifiers Based on
-               Bayesian Networks for Multi-label Classification},
+	  {B}ayesian Networks for Multi-label Classification},
   booktitle = {Probabilistic Graphical Models - 7th European Workshop, {PGM} 2014,
                Utrecht, The Netherlands, September 17-19, 2014. Proceedings},
   series    = {Lecture Notes in Computer Science},
@@ -258,13 +269,4 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@ARTICLE{10.3389/fnana.2018.00037,
-AUTHOR={Varando, Gherardo and Benavides-Piccione, Ruth and Muñoz, Alberto and Kastanauskaite, Asta and Bielza, Concha and Larrañaga, Pedro and DeFelipe, Javier},
-TITLE={MultiMap: A Tool to Automatically Extract and Analyse Spatial Microscopic Data From Large Stacks of Confocal Microscopy Images},
-JOURNAL={Frontiers in Neuroanatomy},
-VOLUME={12},
-YEAR={2018},
-URL={https://www.frontiersin.org/article/10.3389/fnana.2018.00037},
-DOI={10.3389/fnana.2018.00037},
-ISSN={1662-5129}
-}
+
