--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -1,3 +1,22 @@
+@InProceedings{pmlr-v186-leonelli22a,
+  title = 	 {Highly Efficient Structural Learning of Sparse Staged Trees},
+  author =       {Leonelli, Manuele and Varando, Gherardo},
+  booktitle = 	 {Proceedings of The 11th International Conference on Probabilistic Graphical Models},
+  pages = 	 {193--204},
+  year = 	 {2022},
+  editor = 	 {Salmerón, Antonio and Rumı́, Rafael},
+  volume = 	 {186},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {05--07 Oct},
+  publisher =    {PMLR},
+  pdf = 	 {https://proceedings.mlr.press/v186/leonelli22a/leonelli22a.pdf},
+  url = 	 {https://proceedings.mlr.press/v186/leonelli22a.html},
+  abstract = 	 {Several structural learning algorithms for staged tree models, an asymmetric extension of Bayesian networks, have been defined. However, they do not scale efficiently as the number of variables considered increases. Here we introduce the first scalable structural learning algorithm for staged trees, which searches over a space of models where only a small number of dependencies can be imposed. A simulation study as well as a real-world application illustrate our routines and the practical use of such data-learned staged trees.}
+}
+
+
+
+
 @article{JSSv102i06,
  title={The {R} Package stagedtrees for Structural Learning of Stratified Staged Trees},
  volume={102},
