--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -4,7 +4,7 @@
   booktitle = 	 {Proceedings of The 11th International Conference on Probabilistic Graphical Models},
   pages = 	 {193--204},
   year = 	 {2022},
-  editor = 	 {Salmerón, Antonio and Rumı́, Rafael},
+  editor = 	 {Salmerón, Antonio and Rumí, Rafael},
   volume = 	 {186},
   series = 	 {Proceedings of Machine Learning Research},
   month = 	 {05--07 Oct},
