--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -1,3 +1,34 @@
+@InProceedings{pmlr-v206-leonelli23a,
+  title = 	 {Context-Specific Causal Discovery for Categorical Data Using Staged Trees},
+  author =       {Leonelli, Manuele and Varando, Gherardo},
+  booktitle = 	 {Proceedings of The 26th International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {8871--8888},
+  year = 	 {2023},
+  editor = 	 {Ruiz, Francisco and Dy, Jennifer and van de Meent, Jan-Willem},
+  volume = 	 {206},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {25--27 Apr},
+  publisher =    {PMLR},
+  pdf = 	 {https://proceedings.mlr.press/v206/leonelli23a/leonelli23a.pdf},
+  url = 	 {https://proceedings.mlr.press/v206/leonelli23a.html},
+  abstract = 	 {Causal discovery algorithms aim at untangling complex causal relationships from data. Here, we study causal discovery and inference methods based on staged tree models, which can represent complex and asymmetric causal relationships between categorical variables. We provide a first graphical representation of the equivalence class of a staged tree, by looking only at a specific subset of its underlying independences. We further define a new pre-metric, inspired by the widely used structural intervention distance, to quantify the closeness between two staged trees in terms of their corresponding causal inference statements. A simulation study highlights the efficacy of staged trees in uncovering complexes, asymmetric causal relationships from data, and real-world data applications illustrate their use in practical causal analysis.}
+}
+
+
+@article{CARLI2023110488,
+title = {A new class of generative classifiers based on staged tree models},
+journal = {Knowledge-Based Systems},
+pages = {110488},
+year = {2023},
+issn = {0950-7051},
+doi = {https://doi.org/10.1016/j.knosys.2023.110488},
+url = {https://www.sciencedirect.com/science/article/pii/S0950705123002381},
+author = {Federico Carli and Manuele Leonelli and Gherardo Varando},
+keywords = {Bayesian networks, Model selection, Staged trees, Statistical classification},
+abstract = {Generative models for classification use the joint probability distribution of the class variable and the features to construct a decision rule. Among generative models, Bayesian networks and naive Bayes classifiers are the most commonly used and provide a clear graphical representation of the relationship among all variables. However, these have the disadvantage of highly restricting the type of relationships that could exist, by not allowing for context-specific independence. Here we introduce a new class of generative classifiers, called staged tree classifiers, which formally account for context-specific independence. They are constructed by a partitioning of the vertices of an event tree from which conditional independence can be formally read. The naive staged tree classifier is also defined, which extends the classic naive Bayes classifier whilst retaining the same complexity. An extensive simulation study shows that the classification accuracy of staged tree classifiers is competitive with that of state-of-the-art classifiers and an example showcases their use in practice.}
+}
+
+
 @InProceedings{pmlr-v186-leonelli22a,
   title = 	 {Highly Efficient Structural Learning of Sparse Staged Trees},
   author =       {Leonelli, Manuele and Varando, Gherardo},
@@ -29,15 +60,6 @@
  pages={1–30}
 }
 
-
-@misc{leonelli2021contextspecific,
-      title={Context-Specific Causal Discovery for Categorical Data Using Staged Trees}, 
-      author={Manuele Leonelli and Gherardo Varando},
-      year={2021},
-      eprint={2106.04416},
-      archivePrefix={arXiv},
-      primaryClass={stat.ME}
-}
 
 
 @misc{varando2021staged,
@@ -105,15 +127,6 @@
       eprint={2006.03005},
       archivePrefix={arXiv},
       primaryClass={stat.ML}
-}
-
-@misc{carli2020new,
-      title={A new class of generative classifiers based on staged tree models}, 
-      author={Federico Carli and Manuele Leonelli and Gherardo Varando},
-      year={2020},
-      eprint={2012.13798},
-      archivePrefix={arXiv},
-      primaryClass={cs.AI}
 }
 
 
