--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -1,3 +1,31 @@
+@misc{campsvalls2023discovering,
+      title={Discovering Causal Relations and Equations from Data}, 
+      author={Gustau Camps-Valls and Andreas Gerhardus and Urmi Ninad and Gherardo Varando and Georg Martius and Emili Balaguer-Ballester and Ricardo Vinuesa and Emiliano Diaz and Laure Zanna and Jakob Runge},
+      year={2023},
+      eprint={2305.13341},
+      archivePrefix={arXiv},
+      primaryClass={physics.data-an}
+}
+
+@article{runge2023causal,
+  title={Causal inference for time series},
+  author={Runge, Jakob and Gerhardus, Andreas and Varando, Gherardo and Eyring, Veronika and Camps-Valls, Gustau},
+  journal={Nature Reviews Earth \& Environment},
+  pages={1--19},
+  year={2023},
+  publisher={Nature Publishing Group UK London},
+  doi = {https://doi.org/10.1038/s43017-023-00431-y}
+}
+
+@article{diaz2023learning,
+	author={Díaz, Emiliano and Varando, Gherardo and Johnson, J. Emmanuel and Camps-Valls, Gustau},
+	title={Learning latent functions for causal discovery},
+	journal={Machine Learning: Science and Technology},
+	url={http://iopscience.iop.org/article/10.1088/2632-2153/ace151},
+	year={2023},
+	abstract={Causal discovery from observational data offers unique opportunities in many scientific disciplines: reconstructing causal drivers, testing causal hypotheses, and comparing and evaluating models for optimizing targeted interventions. Recent causal discovery methods focused on estimating the latent space of the data to get around a lack of causal sufficiency or additivity constraints. However, estimating the latent space significantly increases model complexity, compromising causal identifiability and making it hard to compare models that correspond to different causal hypotheses. We propose a kernel, non-parametric latent-space modelling approach and deal with the difficulty of comparing causal directions by measuring and controlling for the level of causal assumption fulfilment. We introduce a latent noise causal inference framework to estimate latent factors associated with the hypothesized causal direction by optimizing a loss function with kernel independence criteria. We extend the framework to work with time series using an additional time-dependent kernel regularizer. We discuss the additivity assumption and model complexity and give empirical evidence of performance in a wide range of synthetic and real causal discovery problems.}
+}
+
 @InProceedings{pmlr-v206-leonelli23a,
   title = 	 {Context-Specific Causal Discovery for Categorical Data Using Staged Trees},
   author =       {Leonelli, Manuele and Varando, Gherardo},
@@ -14,7 +42,6 @@
   abstract = 	 {Causal discovery algorithms aim at untangling complex causal relationships from data. Here, we study causal discovery and inference methods based on staged tree models, which can represent complex and asymmetric causal relationships between categorical variables. We provide a first graphical representation of the equivalence class of a staged tree, by looking only at a specific subset of its underlying independences. We further define a new pre-metric, inspired by the widely used structural intervention distance, to quantify the closeness between two staged trees in terms of their corresponding causal inference statements. A simulation study highlights the efficacy of staged trees in uncovering complexes, asymmetric causal relationships from data, and real-world data applications illustrate their use in practical causal analysis.}
 }
 
-
 @article{CARLI2023110488,
 title = {A new class of generative classifiers based on staged tree models},
 journal = {Knowledge-Based Systems},
@@ -27,7 +54,6 @@ author = {Federico Carli and Manuele Leonelli and Gherardo Varando},
 keywords = {Bayesian networks, Model selection, Staged trees, Statistical classification},
 abstract = {Generative models for classification use the joint probability distribution of the class variable and the features to construct a decision rule. Among generative models, Bayesian networks and naive Bayes classifiers are the most commonly used and provide a clear graphical representation of the relationship among all variables. However, these have the disadvantage of highly restricting the type of relationships that could exist, by not allowing for context-specific independence. Here we introduce a new class of generative classifiers, called staged tree classifiers, which formally account for context-specific independence. They are constructed by a partitioning of the vertices of an event tree from which conditional independence can be formally read. The naive staged tree classifier is also defined, which extends the classic naive Bayes classifier whilst retaining the same complexity. An extensive simulation study shows that the classification accuracy of staged tree classifiers is competitive with that of state-of-the-art classifiers and an example showcases their use in practice.}
 }
-
 
 @InProceedings{pmlr-v186-leonelli22a,
   title = 	 {Highly Efficient Structural Learning of Sparse Staged Trees},
