--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -7,6 +7,20 @@
       primaryClass={physics.data-an}
 }
 
+@article{varando2024pairwise,
+title = {Pairwise causal discovery with support measure machines},
+journal = {Applied Soft Computing},
+volume = {150},
+pages = {111030},
+year = {2024},
+issn = {1568-4946},
+doi = {https://doi.org/10.1016/j.asoc.2023.111030},
+url = {https://www.sciencedirect.com/science/article/pii/S1568494623010487},
+author = {Gherardo Varando and Salvador Catsis and Emiliano Diaz and Gustau Camps-Valls},
+keywords = {Pairwise causal discovery, Kernel methods, Kernel mean embedding, Support vector machine, Ensemble methods},
+abstract = {Bivariate causal discovery amounts to inferring the causal association between two random variables, usually from observational data. This task is the simplest and most fundamental causal discovery problem from which more complex discovery methods can be envisioned and developed. Classical bivariate causal discovery methods exploit a combination of specific sets of assumptions and data to obtain identifiability of the causal direction. Data-driven supervised approaches train machine learning models over large sets of causally-labeled bivariate datasets to learn the task of inferring the causal relationship from data. In this work, an ensemble algorithm based on support measure machines is proposed with the aim of combining the strength of different classical approaches (base methods) with data-driven decisions. In particular, support measure machine classifiers are trained to estimate the performance of each base method. Their decision functions are then used as data-dependent weights of a weighted voting scheme to estimate the causal direction in a bivariate causal discovery problem. This work demonstrates that the proposed algorithm, denoted as Causal Ensemble Measure Machine, performs equal to or better than state-of-the-art methods on a wide range of synthetic and real-world bivariate problems. Perhaps more importantly, this method enables a closer examination of the assumption dependence of existing algorithms on observational data.}
+}
+
 @article{runge2023causal,
   title={Causal inference for time series},
   author={Runge, Jakob and Gerhardus, Andreas and Varando, Gherardo and Eyring, Veronika and Camps-Valls, Gustau},
