--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -1,10 +1,72 @@
-@misc{campsvalls2023discovering,
-      title={Discovering Causal Relations and Equations from Data}, 
-      author={Gustau Camps-Valls and Andreas Gerhardus and Urmi Ninad and Gherardo Varando and Georg Martius and Emili Balaguer-Ballester and Ricardo Vinuesa and Emiliano Diaz and Laure Zanna and Jakob Runge},
-      year={2023},
-      eprint={2305.13341},
-      archivePrefix={arXiv},
-      primaryClass={physics.data-an}
+@article{FILIGHEDDU202412,
+title = {Using staged tree models for health data: Investigating invasive fungal infections by aspergillus and other filamentous fungi},
+journal = {Computational and Structural Biotechnology Journal},
+volume = {24},
+pages = {12-22},
+year = {2024},
+issn = {2001-0370},
+doi = {https://doi.org/10.1016/j.csbj.2023.11.013},
+url = {https://www.sciencedirect.com/science/article/pii/S2001037023004282},
+author = {Maria Teresa Filigheddu and Manuele Leonelli and Gherardo Varando and Miguel Ángel Gómez-Bermejo and Sofía Ventura-Díaz and Luis Gorospe and Jesús Fortún},
+keywords = {Diagnostic criteria, Invasive aspergillosis, Machine learning, Probabilistic graphical models, Staged trees},
+abstract = {Machine learning models are increasingly used in the medical domain to study the association between risk factors and diseases to support practitioners in understanding health outcomes. In this paper, we showcase the use of machine-learned staged tree models for investigating complex asymmetric dependence structures in health data. Staged trees are a specific class of generative, probabilistic graphical models that formally model asymmetric conditional independence and non-regular sample spaces. An investigation of the risk factors in invasive fungal infections demonstrates the insights staged trees provide to support medical decision-making.}
+}
+
+@article{varando2024staged,
+  title={Staged trees and asymmetry-labeled DAGs},
+  author={Varando, Gherardo and Carli, Federico and Leonelli, Manuele},
+  journal={Metrika},
+  pages={1--28},
+  year={2024},
+  publisher={Springer}
+  url={https://link.springer.com/article/10.1007/s00184-024-00957-1}
+}
+
+
+@article{leonelli2024learning,
+  title={Learning and interpreting asymmetry-labeled DAGs: a case study on COVID-19 fear},
+  author={Leonelli, Manuele and Varando, Gherardo},
+  journal={Applied Intelligence},
+  volume={54},
+  number={2},
+  pages={1734--1750},
+  year={2024},
+  publisher={Springer}
+  url={https://link.springer.com/article/10.1007/s10489-024-05268-6}
+}
+
+
+@inproceedings{
+anonymous2024semiparametric,
+title={Semiparametric Inference and Equation Discovery with the Bayesian Machine Scientist},
+author={Anonymous},
+booktitle={ICLR 2024 Workshop on AI4DifferentialEquations In Science},
+year={2024},
+url={https://openreview.net/forum?id=7YqV4deFAc}
+}
+
+@inproceedings{
+cohrs2023large,
+title={Large Language Models for Constrained-Based Causal Discovery},
+author={Kai-Hendrik Cohrs and Emiliano Diaz and Vasileios Sitokonstantinou and Gherardo Varando and Gustau Camps-Valls},
+booktitle={AAAI 2024 Workshop on ''Are Large Language Models Simply Causal Parrots?''},
+year={2023},
+url={https://openreview.net/forum?id=NEAoZRWHPN}
+}
+
+@article{CAMPSVALLS20231,
+title = {Discovering causal relations and equations from data},
+journal = {Physics Reports},
+volume = {1044},
+pages = {1-68},
+year = {2023},
+note = {Discovering causal relations and equations from data},
+issn = {0370-1573},
+doi = {https://doi.org/10.1016/j.physrep.2023.10.005},
+url = {https://www.sciencedirect.com/science/article/pii/S0370157323003411},
+author = {Gustau Camps-Valls and Andreas Gerhardus and Urmi Ninad and Gherardo Varando and Georg Martius and Emili Balaguer-Ballester and Ricardo Vinuesa and Emiliano Diaz and Laure Zanna and Jakob Runge},
+keywords = {Causal inference, Causal discovery, Complex systems, Nonlinear dynamics, Equation discovery, Knowledge discovery, Understanding, Artificial intelligence, Neuroscience, Climate science},
+abstract = {Physics is a field of science that has traditionally used the scientific method to answer questions about why natural phenomena occur and to make testable models that explain the phenomena. Discovering equations, laws, and principles that are invariant, robust, and causal has been fundamental in physical sciences throughout the centuries. Discoveries emerge from observing the world and, when possible, performing interventions on the system under study. With the advent of big data and data-driven methods, the fields of causal and equation discovery have developed and accelerated progress in computer science, physics, statistics, philosophy, and many applied fields. This paper reviews the concepts, methods, and relevant works on causal and equation discovery in the broad field of physics and outlines the most important challenges and promising future lines of research. We also provide a taxonomy for data-driven causal and equation discovery, point out connections, and showcase comprehensive case studies in Earth and climate sciences, fluid dynamics and mechanics, and the neurosciences. This review demonstrates that discovering fundamental laws and causal relations by observing natural phenomena is revolutionised with the efficient exploitation of observational data and simulations, modern machine learning algorithms and the combination with domain knowledge. Exciting times are ahead with many challenges and opportunities to improve our understanding of complex systems.}
 }
 
 @article{varando2024pairwise,
@@ -101,15 +163,6 @@ abstract = {Generative models for classification use the joint probability distr
 }
 
 
-
-@misc{varando2021staged,
-      title={Staged trees and asymmetry-labeled {DAG}s}, 
-      author={Gherardo Varando and Federico Carli and Manuele Leonelli},
-      year={2021},
-      eprint={2108.01994},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
-}
 
 @article{DBLP:journals/access/CordobaBLV20,
   author    = {Irene C{\'{o}}rdoba and
