--- a/bibtex/bibtex_gherardovarando.bib
+++ b/bibtex/bibtex_gherardovarando.bib
@@ -18,7 +18,7 @@ abstract = {Machine learning models are increasingly used in the medical domain 
   journal={Metrika},
   pages={1--28},
   year={2024},
-  publisher={Springer}
+  publisher={Springer},
   url={https://link.springer.com/article/10.1007/s00184-024-00957-1}
 }
 
@@ -31,7 +31,7 @@ abstract = {Machine learning models are increasingly used in the medical domain 
   number={2},
   pages={1734--1750},
   year={2024},
-  publisher={Springer}
+  publisher={Springer},
   url={https://link.springer.com/article/10.1007/s10489-024-05268-6}
 }
 
